# flight_anomaly_detection

./: MEMORY.md  README.md  gerar_pdf_features.py  pyproject.toml
aeroespacial-2/: pyproject.toml  refs.bib  relatorio_resultados.aux  relatorio_resultados.fdb_latexmk  resumo_resultados.aux  resumo_resultados.fdb_latexmk  resumo_resultados.fls  resumo_resultados.tex
aeroespacial-2/artigo/: calcular_metricas.py  gerar_relatorio.py  relatorio_resultados.fls  relatorio_resultados.out  relatorio_resultados.tex  resumo_resultados.aux  resumo_resultados.bbl  resumo_resultados.blg  resumo_resultados.out
aeroespacial-2/conf/base/: catalog.yml  parameters.yml
aeroespacial-2/deploy/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  simulate.py
aeroespacial-2/deploy/app/: inference.py  main.py  schemas.py
aeroespacial-2/deploy/app/static/: index.html
aeroespacial-2/deploy/tests/: test_predict.py
aeroespacial-2/notebooks/: 00_00_data_exploration copy.ipynb  00_00_data_exploration.ipynb  00_00_data_explorations.ipynb  00_01_data_exploration.ipynb  00_01_data_explorations.ipynb  00_01_fft_feature_selection.ipynb  01_00_data_cleaning.ipynb  01_00_data_exploration.ipynb  01_00_model1.ipynb  01_01_data_preparation_fft.ipynb  01_01_model2.ipynb  02_00_feature_engineering.ipynb  02_01_feature_engineering_fft.ipynb  03_00_model1.ipynb  03_01_model2.ipynb  03_02_model2_fft.ipynb  03_04_fft_model_training.ipynb  04_00_model_evaluation.ipynb  04_01_fft_model_evaluation.ipynb
aeroespacial-2/notebooks/all_features/: 00_00_data_explorations.ipynb  01_00_data_exploration.ipynb  02_00_feature_engineering.ipynb  03_00_model1.ipynb  04_00_model_evaluation.ipynb  05_00_model2.ipynb
aeroespacial-2/notebooks/fft_features/: 00_01_fft_feature_selection.ipynb  01_01_data_preparation_fft.ipynb  02_01_feature_engineering_fft.ipynb  03_01_fft_model_training.ipynb  04_01_fft_model_evaluation.ipynb  05_01_model2_fft.ipynb
aeroespacial-2/src/aeroespacial_2/: settings.py
aeroespacial-2/src/aeroespacial_2/pipelines/data_ingestion/: nodes.py  pipeline.py
aeroespacial-2/src/aeroespacial_2/pipelines/data_preparation/: nodes.py  pipeline.py
aeroespacial-2/src/aeroespacial_2/pipelines/feature_engineering/: nodes.py  pipeline.py
aeroespacial-2/src/aeroespacial_2/pipelines/fft_data_preparation/: __init__.py  nodes.py  pipeline.py
aeroespacial-2/src/aeroespacial_2/pipelines/fft_feature_engineering/: __init__.py  nodes.py  pipeline.py
aeroespacial-2/src/aeroespacial_2/pipelines/fft_ingestion/: __init__.py  nodes.py  pipeline.py
aeroespacial-2/src/aeroespacial_2/pipelines/fft_model_training/: nodes.py  pipeline.py
aeroespacial-2/src/aeroespacial_2/pipelines/model_training/: nodes.py  pipeline.py
memory/: project_emr_traj_design.md
