[project]
name = "capacitacao-avancada"
version = "0.1.0"
description = ""
authors = [
    {name = "Renato",email = "renato.costa87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kedro (>=1.1.1,<2.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

