[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "aeroespacial_2"
version = "0.1.0"
description = ""
authors = [
    {name = "Renato", email = "renato.costa87@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro>=1.1.1,<2.0.0",
    "kedro-datasets[pandas,pickle,json]>=3.0",
    "pandas>=2.0,<3.0",
    "matplotlib>=3.7",
    "scipy>=1.17.0,<2.0.0",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "joblib>=1.3",
    "seaborn (>=0.13.2,<0.14.0)",
]

[project.scripts]
"aeroespacial-2" = "aeroespacial_2.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]
docs = [
    "docutils<0.21",
    "sphinx>=5.3,<7.3",
    "sphinx_rtd_theme==2.0.0",
    "nbsphinx==0.8.1",
    "sphinx-autodoc-typehints==1.20.2",
    "sphinx_copybutton==0.5.2",
    "Jinja2<3.2.0",
    "myst-parser>=1.0,<2.1"
]

[tool.poetry]
packages = [{include = "aeroespacial_2", from = "aeroespacial-2/src"}]

[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"
pytest-cov = ">=3,<7"
pytest-mock = ">=1.7.1,<2.0"
pytest = "~7.2"
ruff = "~0.12.0"

[tool.kedro]
package_name = "aeroespacial_2"
project_name = "aeroespacial_2"
kedro_init_version = "1.1.1"
tools = "['Linting', 'Testing', 'Custom Logging', 'Documentation', 'Data Structure']"
example_pipeline = "False"
source_dir = "aeroespacial-2/src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov aeroespacial-2/src/aeroespacial_2 -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "W",   # pycodestyle
    "E",   # pycodestyle
    "I",   # isort
    "UP",  # pyupgrade
    "PL",  # Pylint
    "T201", # Print Statement
]
ignore = ["E501"]

[tool.kedro_telemetry]
project_id = "6817250b1df245269461d6ca835a5802"
