[tool.poetry]
name = "motor-failure-detection-api"
version = "1.0.0"
description = "API de detecção de falhas de motor em UAVs via features FFT"
authors = ["renato"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pandas = "^2.2.2"
numpy = "^1.26.4"
scikit-learn = "^1.5.1"
joblib = "^1.4.2"
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"    # cliente HTTP para testes de integração
pytest-asyncio = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
